# SEAMsurrogates

./: .gitignore  AGENTS.md  CLAUDE.md  pyproject.toml
data/HST-drag/: test.csv  train.csv  validation.csv
finalproject/: bo_hst_nn.py  nn_fromdata.py  plot_bo_history.ipynb
surmod/: data_processing.py  neural_network.py  sensitivity_analysis.py
